; ModuleID = '/home/carl/AnghaBench/linux/drivers/powercap/extr_intel_rapl_common.c_rapl_detect_powerlimit.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/powercap/extr_intel_rapl_common.c_rapl_detect_powerlimit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rapl_domain = type { %struct.TYPE_3__*, i32, i32, %struct.TYPE_4__* }
%struct.TYPE_3__ = type { i32, i32* }
%struct.TYPE_4__ = type { i32 }

@FW_LOCK = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"RAPL %s domain %s locked by BIOS\0A\00", align 1
@DOMAIN_STATE_BIOS_LOCKED = common dso_local global i32 0, align 4
@NR_POWER_LIMITS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rapl_domain*)* @rapl_detect_powerlimit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rapl_detect_powerlimit(%struct.rapl_domain* %0) #0 {
  %2 = alloca %struct.rapl_domain*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.rapl_domain* %0, %struct.rapl_domain** %2, align 8
  %6 = load %struct.rapl_domain*, %struct.rapl_domain** %2, align 8
  %7 = load i32, i32* @FW_LOCK, align 4
  %8 = call i64 @rapl_read_data_raw(%struct.rapl_domain* %6, i32 %7, i32 0, i64* %3)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %29, label %10

10:                                               ; preds = %1
  %11 = load i64, i64* %3, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %28

13:                                               ; preds = %10
  %14 = load %struct.rapl_domain*, %struct.rapl_domain** %2, align 8
  %15 = getelementptr inbounds %struct.rapl_domain, %struct.rapl_domain* %14, i32 0, i32 3
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.rapl_domain*, %struct.rapl_domain** %2, align 8
  %20 = getelementptr inbounds %struct.rapl_domain, %struct.rapl_domain* %19, i32 0, i32 2
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @pr_info(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i32 %18, i32 %21)
  %23 = load i32, i32* @DOMAIN_STATE_BIOS_LOCKED, align 4
  %24 = load %struct.rapl_domain*, %struct.rapl_domain** %2, align 8
  %25 = getelementptr inbounds %struct.rapl_domain, %struct.rapl_domain* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 8
  %27 = or i32 %26, %23
  store i32 %27, i32* %25, align 8
  br label %28

28:                                               ; preds = %13, %10
  br label %29

29:                                               ; preds = %28, %1
  store i32 0, i32* %4, align 4
  br label %30

30:                                               ; preds = %56, %29
  %31 = load i32, i32* %4, align 4
  %32 = load i32, i32* @NR_POWER_LIMITS, align 4
  %33 = icmp slt i32 %31, %32
  br i1 %33, label %34, label %59

34:                                               ; preds = %30
  %35 = load %struct.rapl_domain*, %struct.rapl_domain** %2, align 8
  %36 = getelementptr inbounds %struct.rapl_domain, %struct.rapl_domain* %35, i32 0, i32 0
  %37 = load %struct.TYPE_3__*, %struct.TYPE_3__** %36, align 8
  %38 = load i32, i32* %4, align 4
  %39 = sext i32 %38 to i64
  %40 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %37, i64 %39
  %41 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %40, i32 0, i32 0
  %42 = load i32, i32* %41, align 8
  store i32 %42, i32* %5, align 4
  %43 = load %struct.rapl_domain*, %struct.rapl_domain** %2, align 8
  %44 = load i32, i32* %5, align 4
  %45 = call i64 @rapl_read_data_raw(%struct.rapl_domain* %43, i32 %44, i32 0, i64* %3)
  %46 = icmp ne i64 %45, 0
  br i1 %46, label %47, label %55

47:                                               ; preds = %34
  %48 = load %struct.rapl_domain*, %struct.rapl_domain** %2, align 8
  %49 = getelementptr inbounds %struct.rapl_domain, %struct.rapl_domain* %48, i32 0, i32 0
  %50 = load %struct.TYPE_3__*, %struct.TYPE_3__** %49, align 8
  %51 = load i32, i32* %4, align 4
  %52 = sext i32 %51 to i64
  %53 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %50, i64 %52
  %54 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %53, i32 0, i32 1
  store i32* null, i32** %54, align 8
  br label %55

55:                                               ; preds = %47, %34
  br label %56

56:                                               ; preds = %55
  %57 = load i32, i32* %4, align 4
  %58 = add nsw i32 %57, 1
  store i32 %58, i32* %4, align 4
  br label %30

59:                                               ; preds = %30
  ret void
}

declare dso_local i64 @rapl_read_data_raw(%struct.rapl_domain*, i32, i32, i64*) #1

declare dso_local i32 @pr_info(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
